--- a/N00B13_USOpen/.vscode/settings.json
+++ b/N00B13_USOpen/.vscode/settings.json
@@ -6,5 +6,6 @@
     "terminal.integrated.env.osx": {
         "PATH": "/Users/yetibotics/.platformio/penv/bin:/Users/yetibotics/.platformio/penv:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Applications/VMware Fusion.app/Contents/Public",
         "PLATFORMIO_CALLER": "vscode"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
